versioned_docs/version-2025.2.5/professor/danilo_hungaro_micheletti.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Danilo Hungaro Micheletti",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Eletricidade e Medidas Elétricas - 2586",
          "size": 2,
          "teachers": [
            "Danilo Hungaro Micheletti"
          ],
          "classroom": "",
          "students": [
            "MEC2026"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Introdução à Mecatrônica e Metodologia Científica - 2584",
          "size": 1,
          "teachers": [
            "Danilo Hungaro Micheletti"
          ],
          "classroom": "",
          "students": [
            "MEC2026"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Eletricidade e Medidas Elétricas - 1530",
          "size": 3,
          "teachers": [
            "Danilo Hungaro Micheletti"
          ],
          "classroom": "laboratorio_de_eletricidade_e_eletronica_b4",
          "students": [
            "EIN2025 - Grupo B"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Equipamentos elétricos e Sistema elétricos de potência - 2234",
          "size": 4,
          "teachers": [
            "Danilo Hungaro Micheletti"
          ],
          "classroom": "sala_12-2",
          "students": [
            "ELE2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Conservação de Recursos Naturais (PPC2020) - 2310",
          "size": 2,
          "teachers": [
            "Danilo Hungaro Micheletti"
          ],
          "classroom": "sala_11-2",
          "students": [
            "ELE2024"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Eletricidade e Medidas Elétricas - 1530",
          "size": 3,
          "teachers": [
            "Danilo Hungaro Micheletti"
          ],
          "classroom": "laboratorio_de_eletricidade_e_eletronica_b4",
          "students": [
            "EIN2025 - Grupo A"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Projetos Elétricos Industriais - 346",
          "size": 4,
          "teachers": [
            "Danilo Hungaro Micheletti"
          ],
          "classroom": "laboratorio_de_informatica_b",
          "students": [
            "ELM2024"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Instrumentos e Medidas Elétricas - 2591",
          "size": 2,
          "teachers": [
            "Danilo Hungaro Micheletti"
          ],
          "classroom": "",
          "students": [
            "TAI2026"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Projetos Elétricos industriais - 2232",
          "size": 2,
          "teachers": [
            "Danilo Hungaro Micheletti"
          ],
          "classroom": "laboratorio_de_informatica_a",
          "students": [
            "ELE2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Energias alternativas (PPC2020) - 2313",
          "size": 4,
          "teachers": [
            "Danilo Hungaro Micheletti"
          ],
          "classroom": "sala_11-2",
          "students": [
            "ELE2024"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Danilo Hungaro Micheletti

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

<div style={{
  border: '1px solid #ddd',
  borderRadius: '8px',
  padding: '16px',
  marginTop: '24px',
  backgroundColor: '#f9f9f9'
}}>
  <h2 style={{
    borderBottom: '2px solid #ccc',
    paddingBottom: '8px',
    marginBottom: '16px'
  }}>Informações do Docente</h2>
  <p><strong>Cargo/Função:</strong> {data.teacherInfo.role}</p>
  <p><strong>Horário de Atendimento aos Alunos:</strong> {data.teacherInfo.officeHours}</p>
  <p><strong>Observações:</strong> {data.teacherInfo.notes}</p>
</div>

